# raclette

./: .clang-format  .clang-tidy  CMakeLists.txt
include/raclette/: board.hpp  debug.hpp  location.hpp  move.hpp  movegen.hpp  perft.hpp  position.hpp
include/raclette/parser/: fen.hpp
src/: main.cpp
src/raclette/: board.cpp  debug.cpp  movegen.cpp  position.cpp
src/raclette/parser/: fen.cpp
